# ChaosTrace

./: .gitignore  CHANGELOG.md  PATCH_NOTES.txt  README.md  README_PATCH.md  README_UPDATE.md  UPDATE_NOTES.md  app.py  index.html  pyproject.toml  requirements_viz.txt
.github/workflows/: blank.yml  ci.yml  hybrid_dl.yml  hybrid_expected.yml  hybrid_mp.yml  incoherence_expected.yml  incoherence_vectorfield.yml  incoherence_viz.yml  rqa_multiscale.yml  viz_cinematic.yml  viz_pack.yml  viz_pack_cinematic.yml
docs/: ARTIFACT_NAMING.md  COLAB.md  README_COLAB_SNIPPET.md  RQA_UPGRADES.md  VIZ_CINEMATIC.md
notebooks/: ChaosTrace_Colab_Demo.ipynb
scripts/: assert_extras.py  ci_detect_project_root.sh  emit_manifest.py  generate_sailgp_synth.py  viz_incoherence.py  viz_vector_field.py
src/chaostrace/: PATCH_NOTES.txt
src/chaostrace/analyzers/: base.py  delta_stats.py  foil_states_graph.py  lyapunov_like.py  markov_drop.py  null_trace.py  rqa_light.py
src/chaostrace/cli/: rqa_multiscale.py  rqa_optimize.py  run_hybrid.py  run_sweep.py  train_hybrid.py  viz_cinematic.py  viz_enhanced.py
src/chaostrace/data/: ingest.py  synthetic.py
src/chaostrace/dl/: __init__.py  dataset.py  infer.py  model.py  train.py
src/chaostrace/features/: windowing.py
src/chaostrace/hybrid/: __init__.py  causal_var.py  fusion.py  matrix_profile.py  metrics.py
src/chaostrace/hybrid/dl/: __init__.py  dataset.py  infer.py  model.py  train.py
src/chaostrace/orchestrator/: sweep.py
src/chaostrace/phase/: embedding.py
src/chaostrace/rqa/: __init__.py  advanced.py  multivariate.py  params.py
src/chaostrace/utils/: hashing.py  manifest.py
src/chaostrace/viz/: __init__.py  cinematic.py  enhanced.py
src/meteovoid/: live.py  stream.py
test_data/: sample_timeseries.csv  sample_timeseries_1_2_drops.csv  sample_timeseries_chaotic.csv  sample_timeseries_stable.csv
tests/: test_cli_contracts.py  test_hybrid_imports.py  test_rqa_smoke.py  test_smoke.py
