[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaostrace"
version = "0.2.6"
description = "Sweep-based multivariate regime/anomaly detection for foiling sailboats (F50-like)."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name="SailFoil Silence Lab"}]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "statsmodels>=0.14",
  "matplotlib>=3.8",
  "networkx>=3.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4.0",
]

mp = [
  "stumpy>=1.12.0",
]

dl = [
  "torch>=2.2.0",
]

rqa = [
  "pyrqa>=1.0.0",
  "pyunicorn>=0.8.0",
]

opt = [
  "optuna>=3.6.0",
]

viz = [
  "plotly>=5.20.0",
  "kaleido>=0.2.1",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E401"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
